# cargo-release-script

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: check.yml  release_to_production.yml
src/: git_manager.rs  main.rs  version_manager.rs
