[package]
name = "cargo-release-script"
version = "0.1.3"
edition = "2021"
authors = ["Dino Bikic <bikic.dino@gmail.com>"]
license = "MIT"
description = "Tool for updating your cargo project version"
readme = "README.md"
homepage = "https://github.com/dbikic/cargo-release-script"
repository = "https://github.com/dbikic/cargo-release-script"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.14.2"
clap = { version = "3.1.6", features = ["derive"] }
error-chain = "0.12.4"
semver = "1.0.6"
